--- a/UI/index.html
+++ b/UI/index.html
@@ -11,30 +11,30 @@
     <h2>Bringing you comprehensive news.</h2>
     <br>
 
-    <div class="navbar">
+    <nav class="navbar">
         <a class="active" href="Recent">Recent</a>
         <a class="active" href="Politics">Politics</a>
         <a class="active" href="Gossip">Gossip</a>
         <a class="active" href="Business">Business</a>
         <a class="active" href="Entertainment">Entertainment</a>
         <a class="active" href="education">Education</a>
-    </div><br>
+        </nav><br>
 
     <div class="content">
         <h2>Timely:</h2>
             <p>We aim to give you comprehensive news as they happen in the country.</p>
-        <h2>Reliability:</h2>
+        <h2>Reliable:</h2>
             <p>We are most trusted to give news accurately as they occur.</p>
-        <h2>Excellence:</h2>
+        <h2>Excellent:</h2>
             <p>We insist on giving information in the best way possible.</p>
-        <h2>Collaboration:</h2>
+        <h2>Collaborative:</h2>
             <p>We value your feedback. With your help, we are able to improve and give you the best experience possible</p>
-            <br><hr>
+            <br>
     </div> 
        
-    <aside></aside><h3>Kenya's History Today:</h3>
+    <aside><hr><h3>Kenya's History Today:</h3>
         <p>In 1963 Kenya gained it's independence.</p>
-    </aside><br><hr><br>
+    </aside><br><br>
 
     <fieldset>
         <legend><h3><i>Subscribe to our TKT Newsletter</i></h3></legend>
